bindings/bindings.h

struct basisu_transcoder;
typedef enum
{
    basisu_tex_type_2d = 0,            // An arbitrary array of 2D RGB or RGBA images with optional mipmaps, array size = # images, each image may have a different resolution and # of mipmap levels
    basisu_tex_type_2d_array = 1,      // An array of 2D RGB or RGBA images with optional mipmaps, array size = # images, each image has the same resolution and mipmap levels
    basisu_tex_type_cubemap_array = 2, // an array of cubemap levels, total # of images must be divisable by 6, in X+, X-, Y+, Y-, Z+, Z- order, with optional mipmaps
    basisu_tex_type_video = 3,         // An array of 2D video frames, with optional mipmaps, # frames = # images, each image has the same resolution and # of mipmap levels
    basisu_tex_type_volume = 4,        // A 3D texture with optional mipmaps, Z dimension = # images, each image has the same resolution and # of mipmap levels

    cBASISTexTypeTotal
} basisu_texture_type;
typedef struct
{
    basisu_texture_type texture_type;

    uint32_t us_per_frame;

    uint32_t total_images;

    int etc1s;
    int has_alpha_slices;
} basisu_file_info;
typedef struct
{
    uint32_t image_index;
    uint32_t total_levels;

    uint32_t orig_width;
    uint32_t orig_height;

    uint32_t width;
    uint32_t height;

    uint32_t num_blocks_x;
    uint32_t num_blocks_y;
    uint32_t total_blocks;

    uint32_t first_slice_index;

    int alpha_flag;  // true if the image has alpha data
    int iframe_flag; // true if the image is an I-Frame
} basisu_image_info;
typedef struct
{
    uint32_t image_index;
    uint32_t level_index;

    uint32_t orig_width;
    uint32_t orig_height;

    uint32_t width;
    uint32_t height;

    uint32_t num_blocks_x;
    uint32_t num_blocks_y;
    uint32_t total_blocks;

    uint32_t first_slice_index;

    int alpha_flag;  // true if the image has alpha data
    int iframe_flag; // true if the image is an I-Frame
} basisu_image_level_info;
basisu_texture_type basisu_get_texture_type(const struct basisu_transcoder *transcoder, const void *data, uint32_t data_len);
uint32_t basisu_get_total_images(const struct basisu_transcoder *transcoder, const void *data, uint32_t data_len);
uint32_t basisu_get_total_image_levels(const struct basisu_transcoder *transcoder, const void *data, uint32_t data_len, uint32_t image_index);
int basisu_get_image_level_desc(const struct basisu_transcoder *transcoder, const void *data, uint32_t data_len,
                                uint32_t image_index, uint32_t level_index, uint32_t *orig_width, uint32_t *orig_height, uint32_t *total_blocks);