bindings/bindings.rs

#[test]
fn bindgen_test_layout_basisu_file_info() {
    assert_eq!(
        ::std::mem::size_of::<basisu_file_info>(),
        20usize,
        concat!("Size of: ", stringify!(basisu_file_info))
    );
    assert_eq!(
        ::std::mem::align_of::<basisu_file_info>(),
        4usize,
        concat!("Alignment of ", stringify!(basisu_file_info))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<basisu_file_info>())).texture_type as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_file_info),
            "::",
            stringify!(texture_type)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<basisu_file_info>())).us_per_frame as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_file_info),
            "::",
            stringify!(us_per_frame)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<basisu_file_info>())).total_images as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_file_info),
            "::",
            stringify!(total_images)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<basisu_file_info>())).etc1s as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_file_info),
            "::",
            stringify!(etc1s)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<basisu_file_info>())).has_alpha_slices as *const _ as usize
        },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_file_info),
            "::",
            stringify!(has_alpha_slices)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct basisu_image_info {
    pub image_index: u32,
    pub total_levels: u32,
    pub orig_width: u32,
    pub orig_height: u32,
    pub width: u32,
    pub height: u32,
    pub num_blocks_x: u32,
    pub num_blocks_y: u32,
    pub total_blocks: u32,
    pub first_slice_index: u32,
    pub alpha_flag: ::std::os::raw::c_int,
    pub iframe_flag: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_basisu_image_info() {
    assert_eq!(
        ::std::mem::size_of::<basisu_image_info>(),
        48usize,
        concat!("Size of: ", stringify!(basisu_image_info))
    );
    assert_eq!(
        ::std::mem::align_of::<basisu_image_info>(),
        4usize,
        concat!("Alignment of ", stringify!(basisu_image_info))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<basisu_image_info>())).image_index as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_info),
            "::",
            stringify!(image_index)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<basisu_image_info>())).total_levels as *const _ as usize },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_info),
            "::",
            stringify!(total_levels)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<basisu_image_info>())).orig_width as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_info),
            "::",
            stringify!(orig_width)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<basisu_image_info>())).orig_height as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_info),
            "::",
            stringify!(orig_height)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<basisu_image_info>())).width as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_info),
            "::",
            stringify!(width)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<basisu_image_info>())).height as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_info),
            "::",
            stringify!(height)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<basisu_image_info>())).num_blocks_x as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_info),
            "::",
            stringify!(num_blocks_x)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<basisu_image_info>())).num_blocks_y as *const _ as usize },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_info),
            "::",
            stringify!(num_blocks_y)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<basisu_image_info>())).total_blocks as *const _ as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_info),
            "::",
            stringify!(total_blocks)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<basisu_image_info>())).first_slice_index as *const _ as usize
        },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_info),
            "::",
            stringify!(first_slice_index)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<basisu_image_info>())).alpha_flag as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_info),
            "::",
            stringify!(alpha_flag)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<basisu_image_info>())).iframe_flag as *const _ as usize },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_info),
            "::",
            stringify!(iframe_flag)
        )
    );
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct basisu_image_level_info {
    pub image_index: u32,
    pub level_index: u32,
    pub orig_width: u32,
    pub orig_height: u32,
    pub width: u32,
    pub height: u32,
    pub num_blocks_x: u32,
    pub num_blocks_y: u32,
    pub total_blocks: u32,
    pub first_slice_index: u32,
    pub alpha_flag: ::std::os::raw::c_int,
    pub iframe_flag: ::std::os::raw::c_int,
}
#[test]
fn bindgen_test_layout_basisu_image_level_info() {
    assert_eq!(
        ::std::mem::size_of::<basisu_image_level_info>(),
        48usize,
        concat!("Size of: ", stringify!(basisu_image_level_info))
    );
    assert_eq!(
        ::std::mem::align_of::<basisu_image_level_info>(),
        4usize,
        concat!("Alignment of ", stringify!(basisu_image_level_info))
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<basisu_image_level_info>())).image_index as *const _ as usize
        },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_level_info),
            "::",
            stringify!(image_index)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<basisu_image_level_info>())).level_index as *const _ as usize
        },
        4usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_level_info),
            "::",
            stringify!(level_index)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<basisu_image_level_info>())).orig_width as *const _ as usize
        },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_level_info),
            "::",
            stringify!(orig_width)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<basisu_image_level_info>())).orig_height as *const _ as usize
        },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_level_info),
            "::",
            stringify!(orig_height)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<basisu_image_level_info>())).width as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_level_info),
            "::",
            stringify!(width)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<basisu_image_level_info>())).height as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_level_info),
            "::",
            stringify!(height)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<basisu_image_level_info>())).num_blocks_x as *const _ as usize
        },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_level_info),
            "::",
            stringify!(num_blocks_x)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<basisu_image_level_info>())).num_blocks_y as *const _ as usize
        },
        28usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_level_info),
            "::",
            stringify!(num_blocks_y)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<basisu_image_level_info>())).total_blocks as *const _ as usize
        },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_level_info),
            "::",
            stringify!(total_blocks)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<basisu_image_level_info>())).first_slice_index as *const _
                as usize
        },
        36usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_level_info),
            "::",
            stringify!(first_slice_index)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<basisu_image_level_info>())).alpha_flag as *const _ as usize
        },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_level_info),
            "::",
            stringify!(alpha_flag)
        )
    );
    assert_eq!(
        unsafe {
            &(*(::std::ptr::null::<basisu_image_level_info>())).iframe_flag as *const _ as usize
        },
        44usize,
        concat!(
            "Offset of field: ",
            stringify!(basisu_image_level_info),
            "::",
            stringify!(iframe_flag)
        )
    );
}
extern "C" {
    pub fn basisu_get_texture_type(
        transcoder: *const basisu_transcoder,
        data: *const ::std::os::raw::c_void,
        data_len: u32,
    ) -> basisu_texture_type;
}
extern "C" {
    pub fn basisu_get_total_images(
        transcoder: *const basisu_transcoder,
        data: *const ::std::os::raw::c_void,
        data_len: u32,
    ) -> u32;
}
extern "C" {
    pub fn basisu_get_total_image_levels(
        transcoder: *const basisu_transcoder,
        data: *const ::std::os::raw::c_void,
        data_len: u32,
        image_index: u32,
    ) -> u32;
}
extern "C" {
    pub fn basisu_get_image_level_desc(
        transcoder: *const basisu_transcoder,
        data: *const ::std::os::raw::c_void,
        data_len: u32,
        image_index: u32,
        level_index: u32,
        orig_width: *mut u32,
        orig_height: *mut u32,
        total_blocks: *mut u32,
    ) -> ::std::os::raw::c_int;
}
